--- a/lib/web/templates/admin/quest/_form.html.eex
+++ b/lib/web/templates/admin/quest/_form.html.eex
@@ -36,9 +36,7 @@
         <span class="help-block"><%= Help.get("quest.completed_message") %></span>
       <% end %>
 
-      <%= FormView.textarea_field(f, :script, value: @changeset |> script(), rows: 15) do %>
-        <span class="help-block">Enter in valid JSON</span>
-      <% end %>
+      <%= React.react_component("Components.Script", name: "quest[script]", lines: @changeset |> script()) %>
     </div>
 
     <div class="box-footer">
