--- a/lib/web/templates/admin/room_exit/new.html.eex
+++ b/lib/web/templates/admin/room_exit/new.html.eex
@@ -26,30 +26,22 @@
 
         <%= form_for @changeset, room_exit_path(@conn, :create, @room.id, direction: @direction), [class: "form-horizontal"], fn (f) -> %>
           <div class="box-body">
-            <%= if @direction == "north" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :south_id, select_field: :north_id) %>
-            <% end %>
-            <%= if @direction == "south" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :north_id, select_field: :south_id) %>
-            <% end %>
-            <%= if @direction == "west" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :east_id, select_field: :west_id) %>
-            <% end %>
-            <%= if @direction == "east" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :west_id, select_field: :east_id) %>
-            <% end %>
-            <%= if @direction == "up" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :down_id, select_field: :up_id) %>
-            <% end %>
-            <%= if @direction == "down" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :up_id, select_field: :down_id) %>
-            <% end %>
-            <%= if @direction == "in" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :out_id, select_field: :in_id) %>
-            <% end %>
-            <%= if @direction == "out" do %>
-              <%= render("_fields.html", f: f, room: @room, room_field: :in_id, select_field: :out_id) %>
-            <% end %>
+            <%= hidden_input(f, :direction, value: @direction) %>
+
+            <div class="form-group">
+              <%= label f, :start_id, class: "col-md-4" %>
+              <%= hidden_input f, :start_id, value: @room.id %>
+              <div class="col-md-8">
+                <%= select f, :start_id, disabled_room_option(@room), disabled: true, class: "form-control" %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= label f, :finish_id, class: "col-md-4" %>
+              <div class="col-md-8">
+                <%= select f, :finish_id, Zone.room_exits(@room.zone), class: "form-control new-exit" %>
+              </div>
+            </div>
 
             <%= FormView.checkbox_field(f, :has_door, label: "Has Door?") %>
           </div>
