Update the world map to not suck at editing

--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -157,8 +157,9 @@
             <h3 class="box-title">Map</h3>
           </div>
           <div class="box-body">
+            <div id="map-data" data-map="<%= Poison.encode!(@zone.overworld_map) %>" />
             <%= form_tag zone_overworld_path(@conn, :update, @zone.id), method: "PUT" do %>
-              <%= React.react_component("Components.WorldMap", map: @zone.overworld_map, colors: Color.color_keys()) %>
+              <%= React.react_component("Components.WorldMap", colors: Color.color_keys()) %>
             <% end %>
           </div>
         </div>
