UI for editing the overworld exits

--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -155,6 +155,9 @@
         <div class="box">
           <div class="box-header">
             <h3 class="box-title">Map</h3>
+            <div class="box-tools">
+              <%= link("Add Exits", to: zone_overworld_path(@conn, :exits, @zone.id), class: "btn btn-default") %>
+            </div>
           </div>
           <div class="box-body">
             <div id="map-data" data-map="<%= Poison.encode!(@zone.overworld_map) %>" />
