--- a/assets/admin/css/world_map.scss
+++ b/assets/admin/css/world_map.scss
@@ -86,6 +86,19 @@
     border: 3px solid red !important;
   }
 
+  .hover-tooltip:hover:after {
+    background: #657b83;
+    color: white;
+    border-radius: 5px;
+    bottom: 26px;
+    content: attr(data-exits);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    white-space: nowrap;
+  }
+
   .hover-north {
     border-top: 3px solid yellow !important;
     border-bottom: 3px solid red !important;
