--- a/lib/web/templates/admin/zone_overworld/exits.html.eex
+++ b/lib/web/templates/admin/zone_overworld/exits.html.eex
@@ -23,8 +23,9 @@
           <h3 class="box-title">Map Exits</h3>
         </div>
         <div class="box-body">
+          <div id="map-data" data-map="<%= Poison.encode!(@zone.overworld_map) %>" />
           <%= form_tag zone_overworld_path(@conn, :update, @zone.id), method: "PUT" do %>
-            <%= React.react_component("Components.WorldMapExits", map: @zone.overworld_map, directions: Exit.directions(), exits: room_exits(@zone)) %>
+            <%= React.react_component("Components.WorldMapExits", directions: Exit.directions(), exits: room_exits(@zone)) %>
           <% end %>
         </div>
       </div>
