Update the starting save config from the web admin

--- a/lib/web/templates/admin/config/index.html.eex
+++ b/lib/web/templates/admin/config/index.html.eex
@@ -63,7 +63,9 @@
               <tr>
                 <th>Starting Save</th>
                 <td><pre><%= Config.starting_save() |> Poison.encode!(pretty: true) %></pre></td>
-                <td></td>
+                <td>
+                  <%= link("Edit", to: config_path(@conn, :edit, "starting_save"), class: "btn btn-default btn-xs") %>
+                </td>
               </tr>
               <tr>
                 <th>Random Character Names</th>
