--- a/assets/play/css/app.scss
+++ b/assets/play/css/app.scss
@@ -139,7 +139,7 @@ input {
   margin-left: 1%;
   margin-right: 1%;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   align-content: center;
 }
 
@@ -148,6 +148,7 @@ input {
   position: relative;
   font-size: 1.1em;
   flex: 1;
+  flex-basis: 30%;
   margin-left: 3px;
   margin-right: 3px;
 
@@ -178,6 +179,28 @@ input {
   }
 }
 
+.experience-bar {
+  display: inline-block;
+  position: relative;
+  font-size: 1.1em;
+  flex: 1;
+  flex-basis: 100%;
+  height: 12px;
+  width: 100%;
+  margin-top: 6px;
+  margin-left: 3px;
+  margin-right: 3px;
+
+  .percentage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 12px;
+    z-index: 2;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   input {
     width: 100%;
@@ -192,10 +215,12 @@ input {
  * Tooltips
  */
 
+.tooltip,
 .command {
   position: relative;
 }
 
+.tooltip:hover:after,
 .command:hover:after {
   border-radius: 5px;
   bottom: 26px;
