--- a/lib/web/templates/color/index.css.eex
+++ b/lib/web/templates/color/index.css.eex
@@ -30,6 +30,7 @@ body {
   color: <%= Config.color_room_info_exit() %>;
 }
 
+.experience-bar,
 .stat-block {
   background-color: <%= Config.color_stat_block_background() %>;
   border: 2px solid <%= Config.color_stat_block_background() %>;
@@ -56,6 +57,15 @@ body {
   background: <%= Config.color_endurance_bar() %>;
 }
 
+#experience .percentage {
+  background: <%= Config.color_experience_bar() %>;
+}
+
+.tooltip {
+  color: white;
+}
+
+.tooltip:hover:after,
 .command:hover:after {
   background: #657b83;
 }
